[package]
name = "env_swapper"
version = "0.1.0"
edition = "2021"
authors = ["Ben Santora <bensatlantik@gmail.com>"]
description = "A lightweight Rust library to temporarily set environment variables and automatically restore them when out of scope."
license = "MIT"
repository = "https://github.com/bensatlantik/env_swapper"
readme = "README.md"
keywords = ["environment", "variables", "utility", "testing"]
categories = ["development-tools"]

[dependencies]
